--- a/Day1/style.css
+++ b/Day1/style.css
@@ -1,3 +1,16 @@
 body{
     background-color: aquamarine;
 }
+table{
+    background-color: cadetblue;
+    border-radius: 10px;
+    border-color: aqua;
+    border-style:solid;
+    border-width: 5px;
+    color: cyan;
+}
+h1{
+    background-color: blue;
+    color: black;
+    text-align: center;
+}
