--- a/Day2/Assignment/navbar.css
+++ b/Day2/Assignment/navbar.css
@@ -3,7 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
 }
-.dv{
+.mydv{
     display: flex;
     flex-direction: column;
 }
@@ -18,3 +18,60 @@
     align-items: center;
     border-bottom: 1px solid grey;
 }
+
+.header .logo{
+    color: blueviolet;
+    margin-left: 20px;
+}
+
+.header .menu{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.header .nav-right{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+    margin-right: 20px;
+}
+
+.nav-item{
+    background-color: rgb(178, 243, 248);
+    font-size: 20px;
+    font-family: Poppins;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+ .login/*, .signup */{
+    width: Hug (104px)px;
+    height: Hug (48px)px;
+    padding: 12px 20px 12px 20px;
+    border-radius: 10px 0 0 0;
+    opacity: 0px;
+    margin-right: 3px;
+    border-radius: 10px;
+    border: 1px solid gray;
+}
+
+.signup
+{
+  width: Hug (104px)px;
+  height: Hug (48px)px;
+  padding: 12px 20px 12px 20px;
+  border-radius: 10px;
+  background: linear-gradient(180deg, #3940A0 0%, #3CA3C1 100%);
+  opacity: 0px;
+  border: 1px solid grey;
+  color: #FFFFFF;
+}
+
